Picked the data we're going to use later for the three waves

--- a/Code1.Rmd
+++ b/Code1.Rmd
@@ -3,12 +3,12 @@ title: "Code1"
 output: pdf_document
 date: "2025-05-06"
 ---
-
+## Settings
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(warning = FALSE)
 ```
-
+## Reading data frames
 ```{r}
 library(foreign)
 library(tidyverse)
@@ -16,5 +16,14 @@ library(dplyr)
 wave1 <- covid_19_wave1_survey_cls
 wave2 <- covid_19_wave2_survey_cls
 wave3 <- covid_19_wave3_survey_cls
+```
+## Exploring dataset
+```{r}
+wave1 <- wave1 %>%
+  select(NCDSID, CW1_COVID19, CW1_COVID_HOSPAD, CW1_GHQ, CW1_HHNUM, CW1_FINANCIALMANB, CW1_FINANCIALMAND, CW1_MALAISE_1, CW1_MALAISE_2, CW1_MALAISE_3, CW1_MALAISE_4, CW1_MALAISE_5, CW1_MALAISE_6, CW1_MALAISE_7, CW1_MALAISE_8, CW1_MALAISE_9, CW1_GAD2PHQ2_1, CW1_GAD2PHQ2_2, CW1_GAD2PHQ2_3, CW1_GAD2PHQ2_4)
+wave2 <- wave2 %>%
+  select(NCDSID, CW2_COVID19, CW2_COVID_HOSPAD, CW2_GHQ, CW2_HHNUM, CW2_FINANCIALMANB, CW2_FINANCIALMAND, CW2_MALAISE_1, CW2_MALAISE_2, CW2_MALAISE_3, CW2_MALAISE_4, CW2_MALAISE_5, CW2_MALAISE_6, CW2_MALAISE_7, CW2_MALAISE_8, CW2_MALAISE_9, CW2_GAD2PHQ2_1, CW2_GAD2PHQ2_2, CW2_GAD2PHQ2_3, CW2_GAD2PHQ2_4)
+wave3 <- wave3 %>%
+  select(NCDSID, CW3_COVID19, CW3_COVID_HOSPAD, CW3_GHQ, CW3_HHNUM, CW3_FINANCIALMANB, CW3_FINANCIALMAND, CW3_MALAISE_1, CW3_MALAISE_2, CW3_MALAISE_3, CW3_MALAISE_4, CW3_MALAISE_5, CW3_MALAISE_6, CW3_MALAISE_7, CW3_MALAISE_8, CW3_MALAISE_9, CW3_GAD2PHQ2_1, CW3_GAD2PHQ2_2, CW3_GAD2PHQ2_3, CW3_GAD2PHQ2_4)
 ```
 
