Now the 3 waves data are in long format.

--- a/Code1.Rmd
+++ b/Code1.Rmd
@@ -20,11 +20,11 @@ wave3 <- covid_19_wave3_survey_cls
 ## Exploring dataset, picking the data going to be used in later analysis
 ```{r}
 wave1 <- wave1 %>%
-  select(NCDSID, CW1_COVID19, CW1_COVID_HOSPAD, CW1_GHQ, CW1_HHNUM, CW1_FINANCIALMANB, CW1_FINANCIALMAND, CW1_MALAISE_1, CW1_MALAISE_2, CW1_MALAISE_3, CW1_MALAISE_4, CW1_MALAISE_5, CW1_MALAISE_6, CW1_MALAISE_7, CW1_MALAISE_8, CW1_MALAISE_9, CW1_GAD2PHQ2_1, CW1_GAD2PHQ2_2, CW1_GAD2PHQ2_3, CW1_GAD2PHQ2_4)
+  select(NCDSID, CW1_COVID19, CW1_COVID_HOSPAD, CW1_GHQ, CW1_HHNUM, CW1_MALAISE_1, CW1_MALAISE_2, CW1_MALAISE_3, CW1_MALAISE_4, CW1_MALAISE_5, CW1_MALAISE_6, CW1_MALAISE_7, CW1_MALAISE_8, CW1_MALAISE_9, CW1_GAD2PHQ2_1, CW1_GAD2PHQ2_2, CW1_GAD2PHQ2_3, CW1_GAD2PHQ2_4)
 wave2 <- wave2 %>%
-  select(NCDSID, CW2_COVID19, CW2_COVID_HOSPAD, CW2_GHQ, CW2_HHNUM, CW2_FINANCIALMANB, CW2_FINANCIALMAND, CW2_MALAISE_1, CW2_MALAISE_2, CW2_MALAISE_3, CW2_MALAISE_4, CW2_MALAISE_5, CW2_MALAISE_6, CW2_MALAISE_7, CW2_MALAISE_8, CW2_MALAISE_9, CW2_GAD2PHQ2_1, CW2_GAD2PHQ2_2, CW2_GAD2PHQ2_3, CW2_GAD2PHQ2_4)
+  select(NCDSID, CW2_COVID19, CW2_COVID_HOSPAD, CW2_GHQ, CW2_HHNUM, CW2_MALAISE_1, CW2_MALAISE_2, CW2_MALAISE_3, CW2_MALAISE_4, CW2_MALAISE_5, CW2_MALAISE_6, CW2_MALAISE_7, CW2_MALAISE_8, CW2_MALAISE_9, CW2_GAD2PHQ2_1, CW2_GAD2PHQ2_2, CW2_GAD2PHQ2_3, CW2_GAD2PHQ2_4)
 wave3 <- wave3 %>%
-  select(NCDSID, CW3_COVID19, CW3_COVID_HOSPAD, CW3_GHQ, CW3_HHNUM, CW3_FINANCIALMANB, CW3_FINANCIALMAND, CW3_MALAISE_1, CW3_MALAISE_2, CW3_MALAISE_3, CW3_MALAISE_4, CW3_MALAISE_5, CW3_MALAISE_6, CW3_MALAISE_7, CW3_MALAISE_8, CW3_MALAISE_9, CW3_GAD2PHQ2_1, CW3_GAD2PHQ2_2, CW3_GAD2PHQ2_3, CW3_GAD2PHQ2_4)
+  select(NCDSID, CW3_COVID19, CW3_COVID_HOSPAD, CW3_GHQ, CW3_HHNUM, CW3_MALAISE_1, CW3_MALAISE_2, CW3_MALAISE_3, CW3_MALAISE_4, CW3_MALAISE_5, CW3_MALAISE_6, CW3_MALAISE_7, CW3_MALAISE_8, CW3_MALAISE_9, CW3_GAD2PHQ2_1, CW3_GAD2PHQ2_2, CW3_GAD2PHQ2_3, CW3_GAD2PHQ2_4)
 ```
 ## Data cleaning, maybe we should filter out everyone who does not have a participant ID?
 ```{r}
@@ -45,7 +45,7 @@ wave2_com <- wave2 %>%
 wave3_com <- wave3 %>%
   filter(NCDSID %in% common_ids)
 ```
-## Specifying waves, preparing for pivot_long
+## Specifying waves, changing variable names, pivot longer.
 ```{r}
 wave1_com <- wave1_com %>%
   mutate(wave = 1)
@@ -54,5 +54,12 @@ wave2_com <- wave2_com %>%
 wave3_com <- wave3_com %>%
   mutate(wave = 3)
 
+wave1_com <- wave1_com %>%
+  rename(COVID19 = CW1_COVID19, COVID_HOSPAD = CW1_COVID_HOSPAD, GHQ = CW1_GHQ, HHNUM = CW1_HHNUM, MALAISE_1 = CW1_MALAISE_1, MALAISE_2 = CW1_MALAISE_2, MALAISE_3 = CW1_MALAISE_3, MALAISE_4 = CW1_MALAISE_4, MALAISE_5 = CW1_MALAISE_5, MALAISE_6 = CW1_MALAISE_6, MALAISE_7 = CW1_MALAISE_7, MALAISE_8 = CW1_MALAISE_8, MALAISE_9 = CW1_MALAISE_9, GAD2PHQ2_1 = CW1_GAD2PHQ2_1, GAD2PHQ2_2 = CW1_GAD2PHQ2_2, GAD2PHQ2_3 = CW1_GAD2PHQ2_3, GAD2PHQ2_4 = CW1_GAD2PHQ2_4)
+wave2_com <- wave2_com %>%
+  rename(COVID19 = CW2_COVID19, COVID_HOSPAD = CW2_COVID_HOSPAD, GHQ = CW2_GHQ, HHNUM = CW2_HHNUM, MALAISE_1 = CW2_MALAISE_1, MALAISE_2 = CW2_MALAISE_2, MALAISE_3 = CW2_MALAISE_3, MALAISE_4 = CW2_MALAISE_4, MALAISE_5 = CW2_MALAISE_5, MALAISE_6 = CW2_MALAISE_6, MALAISE_7 = CW2_MALAISE_7, MALAISE_8 = CW2_MALAISE_8, MALAISE_9 = CW2_MALAISE_9, GAD2PHQ2_1 = CW2_GAD2PHQ2_1, GAD2PHQ2_2 = CW2_GAD2PHQ2_2, GAD2PHQ2_3 = CW2_GAD2PHQ2_3, GAD2PHQ2_4 = CW2_GAD2PHQ2_4)
+wave3_com <- wave3_com %>%
+  rename(COVID19 = CW3_COVID19, COVID_HOSPAD = CW3_COVID_HOSPAD, GHQ = CW3_GHQ, HHNUM = CW3_HHNUM, MALAISE_1 = CW3_MALAISE_1, MALAISE_2 = CW3_MALAISE_2, MALAISE_3 = CW3_MALAISE_3, MALAISE_4 = CW3_MALAISE_4, MALAISE_5 = CW3_MALAISE_5, MALAISE_6 = CW3_MALAISE_6, MALAISE_7 = CW3_MALAISE_7, MALAISE_8 = CW3_MALAISE_8, MALAISE_9 = CW3_MALAISE_9, GAD2PHQ2_1 = CW3_GAD2PHQ2_1, GAD2PHQ2_2 = CW3_GAD2PHQ2_2, GAD2PHQ2_3 = CW3_GAD2PHQ2_3, GAD2PHQ2_4 = CW3_GAD2PHQ2_4)
+long <- bind_rows(wave1_com, wave2_com, wave3_com)
 ```
 
