--- a/Code1.Rmd
+++ b/Code1.Rmd
@@ -61,5 +61,6 @@ wave2_com <- wave2_com %>%
 wave3_com <- wave3_com %>%
   rename(COVID19 = CW3_COVID19, COVID_HOSPAD = CW3_COVID_HOSPAD, GHQ = CW3_GHQ, HHNUM = CW3_HHNUM, MALAISE_1 = CW3_MALAISE_1, MALAISE_2 = CW3_MALAISE_2, MALAISE_3 = CW3_MALAISE_3, MALAISE_4 = CW3_MALAISE_4, MALAISE_5 = CW3_MALAISE_5, MALAISE_6 = CW3_MALAISE_6, MALAISE_7 = CW3_MALAISE_7, MALAISE_8 = CW3_MALAISE_8, MALAISE_9 = CW3_MALAISE_9, GAD2PHQ2_1 = CW3_GAD2PHQ2_1, GAD2PHQ2_2 = CW3_GAD2PHQ2_2, GAD2PHQ2_3 = CW3_GAD2PHQ2_3, GAD2PHQ2_4 = CW3_GAD2PHQ2_4)
 long <- bind_rows(wave1_com, wave2_com, wave3_com)
+str(long)
 ```
 
