Now this should be the version suitable for further analysis to be conducted (If anything's weird we can change it anytime)

--- a/Code1.Rmd
+++ b/Code1.Rmd
@@ -81,6 +81,7 @@ long <- long %>%
   mutate(malaise = sum(MALAISE_1, MALAISE_2, MALAISE_3, MALAISE_4, MALAISE_5, MALAISE_6, MALAISE_7, MALAISE_8, MALAISE_9, na.rm = FALSE)) %>%
   rowwise() %>%
   mutate(GAD = sum(GAD2PHQ2_1, GAD2PHQ2_2, GAD2PHQ2_3, GAD2PHQ2_4, na.rm = FALSE))
-
+clean <- long %>%
+  select(NCDSID, GHQ, HHNUM, wave, covid_positive, hospitalise, malaise, GAD)
 ```
 
