--- a/Code1.Rmd
+++ b/Code1.Rmd
@@ -20,11 +20,11 @@ wave3 <- covid_19_wave3_survey_cls
 ## Exploring dataset, picking the data going to be used in later analysis
 ```{r}
 wave1 <- wave1 %>%
-  select(NCDSID, CW1_COVID19, CW1_COVID_HOSPAD, CW1_GHQ, CW1_HHNUM, CW1_MALAISE_1, CW1_MALAISE_2, CW1_MALAISE_3, CW1_MALAISE_4, CW1_MALAISE_5, CW1_MALAISE_6, CW1_MALAISE_7, CW1_MALAISE_8, CW1_MALAISE_9, CW1_GAD2PHQ2_1, CW1_GAD2PHQ2_2, CW1_GAD2PHQ2_3, CW1_GAD2PHQ2_4)
+  select(NCDSID, CW1_COVID19, CW1_COVID_HOSPAD, CW1_GHQ, CW1_HHNUM, CW1_MALAISE_1, CW1_MALAISE_2, CW1_MALAISE_3, CW1_MALAISE_4, CW1_MALAISE_5, CW1_MALAISE_6, CW1_MALAISE_7, CW1_MALAISE_8, CW1_MALAISE_9, CW1_GAD2PHQ2_1, CW1_GAD2PHQ2_2, CW1_GAD2PHQ2_3, CW1_GAD2PHQ2_4, CW1_LONELY_1, CW1_LONELY_2, CW1_LONELY_3, CW1_LONELY_4)
 wave2 <- wave2 %>%
-  select(NCDSID, CW2_COVID19, CW2_COVID_HOSPAD, CW2_GHQ, CW2_HHNUM, CW2_MALAISE_1, CW2_MALAISE_2, CW2_MALAISE_3, CW2_MALAISE_4, CW2_MALAISE_5, CW2_MALAISE_6, CW2_MALAISE_7, CW2_MALAISE_8, CW2_MALAISE_9, CW2_GAD2PHQ2_1, CW2_GAD2PHQ2_2, CW2_GAD2PHQ2_3, CW2_GAD2PHQ2_4)
+  select(NCDSID, CW2_COVID19, CW2_COVID_HOSPAD, CW2_GHQ, CW2_HHNUM, CW2_MALAISE_1, CW2_MALAISE_2, CW2_MALAISE_3, CW2_MALAISE_4, CW2_MALAISE_5, CW2_MALAISE_6, CW2_MALAISE_7, CW2_MALAISE_8, CW2_MALAISE_9, CW2_GAD2PHQ2_1, CW2_GAD2PHQ2_2, CW2_GAD2PHQ2_3, CW2_GAD2PHQ2_4, CW2_LONELY_1, CW2_LONELY_2, CW2_LONELY_3, CW2_LONELY_4)
 wave3 <- wave3 %>%
-  select(NCDSID, CW3_COVID19, CW3_COVID_HOSPAD, CW3_GHQ, CW3_HHNUM, CW3_MALAISE_1, CW3_MALAISE_2, CW3_MALAISE_3, CW3_MALAISE_4, CW3_MALAISE_5, CW3_MALAISE_6, CW3_MALAISE_7, CW3_MALAISE_8, CW3_MALAISE_9, CW3_GAD2PHQ2_1, CW3_GAD2PHQ2_2, CW3_GAD2PHQ2_3, CW3_GAD2PHQ2_4)
+  select(NCDSID, CW3_COVID19, CW3_COVID_HOSPAD, CW3_GHQ, CW3_HHNUM, CW3_MALAISE_1, CW3_MALAISE_2, CW3_MALAISE_3, CW3_MALAISE_4, CW3_MALAISE_5, CW3_MALAISE_6, CW3_MALAISE_7, CW3_MALAISE_8, CW3_MALAISE_9, CW3_GAD2PHQ2_1, CW3_GAD2PHQ2_2, CW3_GAD2PHQ2_3, CW3_GAD2PHQ2_4, CW3_LONELY_1, CW3_LONELY_2, CW3_LONELY_3, CW3_LONELY_4)
 ```
 ## Data cleaning, maybe we should filter out everyone who does not have a participant ID?
 ```{r}
@@ -55,11 +55,11 @@ wave3_com <- wave3_com %>%
   mutate(wave = 3)
 
 wave1_com <- wave1_com %>%
-  rename(COVID19 = CW1_COVID19, COVID_HOSPAD = CW1_COVID_HOSPAD, GHQ = CW1_GHQ, HHNUM = CW1_HHNUM, MALAISE_1 = CW1_MALAISE_1, MALAISE_2 = CW1_MALAISE_2, MALAISE_3 = CW1_MALAISE_3, MALAISE_4 = CW1_MALAISE_4, MALAISE_5 = CW1_MALAISE_5, MALAISE_6 = CW1_MALAISE_6, MALAISE_7 = CW1_MALAISE_7, MALAISE_8 = CW1_MALAISE_8, MALAISE_9 = CW1_MALAISE_9, GAD2PHQ2_1 = CW1_GAD2PHQ2_1, GAD2PHQ2_2 = CW1_GAD2PHQ2_2, GAD2PHQ2_3 = CW1_GAD2PHQ2_3, GAD2PHQ2_4 = CW1_GAD2PHQ2_4)
+  rename(COVID19 = CW1_COVID19, COVID_HOSPAD = CW1_COVID_HOSPAD, GHQ = CW1_GHQ, HHNUM = CW1_HHNUM, MALAISE_1 = CW1_MALAISE_1, MALAISE_2 = CW1_MALAISE_2, MALAISE_3 = CW1_MALAISE_3, MALAISE_4 = CW1_MALAISE_4, MALAISE_5 = CW1_MALAISE_5, MALAISE_6 = CW1_MALAISE_6, MALAISE_7 = CW1_MALAISE_7, MALAISE_8 = CW1_MALAISE_8, MALAISE_9 = CW1_MALAISE_9, GAD2PHQ2_1 = CW1_GAD2PHQ2_1, GAD2PHQ2_2 = CW1_GAD2PHQ2_2, GAD2PHQ2_3 = CW1_GAD2PHQ2_3, GAD2PHQ2_4 = CW1_GAD2PHQ2_4, LONELY_1 = CW1_LONELY_1, LONELY_2 = CW1_LONELY_2, LONELY_3 = CW1_LONELY_3, LONELY_4 = CW1_LONELY_4)
 wave2_com <- wave2_com %>%
-  rename(COVID19 = CW2_COVID19, COVID_HOSPAD = CW2_COVID_HOSPAD, GHQ = CW2_GHQ, HHNUM = CW2_HHNUM, MALAISE_1 = CW2_MALAISE_1, MALAISE_2 = CW2_MALAISE_2, MALAISE_3 = CW2_MALAISE_3, MALAISE_4 = CW2_MALAISE_4, MALAISE_5 = CW2_MALAISE_5, MALAISE_6 = CW2_MALAISE_6, MALAISE_7 = CW2_MALAISE_7, MALAISE_8 = CW2_MALAISE_8, MALAISE_9 = CW2_MALAISE_9, GAD2PHQ2_1 = CW2_GAD2PHQ2_1, GAD2PHQ2_2 = CW2_GAD2PHQ2_2, GAD2PHQ2_3 = CW2_GAD2PHQ2_3, GAD2PHQ2_4 = CW2_GAD2PHQ2_4)
+  rename(COVID19 = CW2_COVID19, COVID_HOSPAD = CW2_COVID_HOSPAD, GHQ = CW2_GHQ, HHNUM = CW2_HHNUM, MALAISE_1 = CW2_MALAISE_1, MALAISE_2 = CW2_MALAISE_2, MALAISE_3 = CW2_MALAISE_3, MALAISE_4 = CW2_MALAISE_4, MALAISE_5 = CW2_MALAISE_5, MALAISE_6 = CW2_MALAISE_6, MALAISE_7 = CW2_MALAISE_7, MALAISE_8 = CW2_MALAISE_8, MALAISE_9 = CW2_MALAISE_9, GAD2PHQ2_1 = CW2_GAD2PHQ2_1, GAD2PHQ2_2 = CW2_GAD2PHQ2_2, GAD2PHQ2_3 = CW2_GAD2PHQ2_3, GAD2PHQ2_4 = CW2_GAD2PHQ2_4, LONELY_1 = CW2_LONELY_1, LONELY_2 = CW2_LONELY_2, LONELY_3 = CW2_LONELY_3, LONELY_4 = CW2_LONELY_4)
 wave3_com <- wave3_com %>%
-  rename(COVID19 = CW3_COVID19, COVID_HOSPAD = CW3_COVID_HOSPAD, GHQ = CW3_GHQ, HHNUM = CW3_HHNUM, MALAISE_1 = CW3_MALAISE_1, MALAISE_2 = CW3_MALAISE_2, MALAISE_3 = CW3_MALAISE_3, MALAISE_4 = CW3_MALAISE_4, MALAISE_5 = CW3_MALAISE_5, MALAISE_6 = CW3_MALAISE_6, MALAISE_7 = CW3_MALAISE_7, MALAISE_8 = CW3_MALAISE_8, MALAISE_9 = CW3_MALAISE_9, GAD2PHQ2_1 = CW3_GAD2PHQ2_1, GAD2PHQ2_2 = CW3_GAD2PHQ2_2, GAD2PHQ2_3 = CW3_GAD2PHQ2_3, GAD2PHQ2_4 = CW3_GAD2PHQ2_4)
+  rename(COVID19 = CW3_COVID19, COVID_HOSPAD = CW3_COVID_HOSPAD, GHQ = CW3_GHQ, HHNUM = CW3_HHNUM, MALAISE_1 = CW3_MALAISE_1, MALAISE_2 = CW3_MALAISE_2, MALAISE_3 = CW3_MALAISE_3, MALAISE_4 = CW3_MALAISE_4, MALAISE_5 = CW3_MALAISE_5, MALAISE_6 = CW3_MALAISE_6, MALAISE_7 = CW3_MALAISE_7, MALAISE_8 = CW3_MALAISE_8, MALAISE_9 = CW3_MALAISE_9, GAD2PHQ2_1 = CW3_GAD2PHQ2_1, GAD2PHQ2_2 = CW3_GAD2PHQ2_2, GAD2PHQ2_3 = CW3_GAD2PHQ2_3, GAD2PHQ2_4 = CW3_GAD2PHQ2_4, LONELY_1 = CW3_LONELY_1, LONELY_2 = CW3_LONELY_2, LONELY_3 = CW3_LONELY_3, LONELY_4 = CW3_LONELY_4)
 long <- bind_rows(wave1_com, wave2_com, wave3_com)
 
 ```
@@ -80,9 +80,14 @@ long <- long %>%
   rowwise() %>%
   mutate(malaise = sum(MALAISE_1, MALAISE_2, MALAISE_3, MALAISE_4, MALAISE_5, MALAISE_6, MALAISE_7, MALAISE_8, MALAISE_9, na.rm = FALSE)) %>%
   rowwise() %>%
-  mutate(GAD = sum(GAD2PHQ2_1, GAD2PHQ2_2, GAD2PHQ2_3, GAD2PHQ2_4, na.rm = FALSE))
+  mutate(
+    GAD = sum(GAD2PHQ2_1, GAD2PHQ2_2, GAD2PHQ2_3, GAD2PHQ2_4, na.rm = FALSE)) %>%
+  rowwise() %>%
+  mutate(
+    LONELY = sum(LONELY_1, LONELY_2, LONELY_3, LONELY_4)
+  )
 clean <- long %>%
-  select(NCDSID, GHQ, HHNUM, wave, covid_positive, hospitalise, malaise, GAD)
+  select(NCDSID, GHQ, HHNUM, wave, covid_positive, hospitalise, malaise, GAD, LONELY)
 # Finalised dataframe for multi-level analysis: clean
 ```
 
